--- a/css/style.css
+++ b/css/style.css
@@ -1636,9 +1636,6 @@ template {
     max-width: 576px;
     width: 92%;
   }
-  .navbar__search, .navbar-menu, .navbar__user {
-    display: none;
-  }
   .menu-button {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1837,13 +1834,15 @@ template {
     margin-right: 7px;
     margin-left: 0;
   }
-  .footer__additional__title {
-    font-size: 15px;
-    line-height: 19px;
+  .footer__title {
+    font-size: 14px;
+    line-height: 160%;
   }
-  .footer__item {
-    font-size: 12px;
-    line-height: 145%;
+  .footer__item, .footer__text {
+    -ms-flex-preferred-size: 100px;
+        flex-basis: 100px;
+    font-size: 16px;
+    line-height: 21px;
   }
 }
 
@@ -1905,14 +1904,14 @@ template {
     line-height: 24px;
   }
   .footer__title {
-    font-size: 15px;
-    line-height: 19px;
+    font-size: 14px;
+    line-height: 160%;
   }
   .footer__item, .footer__text {
     -ms-flex-preferred-size: 100px;
         flex-basis: 100px;
-    font-size: 11px;
-    line-height: 145%;
+    font-size: 16px;
+    line-height: 21px;
   }
   .footer__categories {
     margin-right: 40px;
@@ -1986,23 +1985,136 @@ template {
   }
 }
 
+@media (max-width: 536px) {
+  .footer-wrapper {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    grid-column: 1fr 1fr 1fr;
+    grid-gap: 0 0;
+  }
+  .footer__logo {
+    -ms-grid-row: 1;
+    grid-row: 1;
+    width: 104px;
+    height: 120px;
+    margin-bottom: 49px;
+  }
+  .footer__social-network {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-grid-row: 2;
+    grid-row: 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+    justify-self: start;
+    -ms-flex-item-align: start;
+        align-self: start;
+    margin-bottom: 30px;
+    width: 100%;
+  }
+  .footer_legal {
+    -ms-grid-row: 2;
+    grid-row: 2;
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 2;
+    grid-column: 3 / 5;
+    margin-bottom: 30px;
+  }
+  .footer__title--inline {
+    margin-bottom: 20px;
+  }
+  .footer__additional {
+    -ms-grid-row: 3;
+    grid-row: 3;
+    grid-column: span 2;
+    margin-bottom: 30px;
+  }
+  .footer__categories {
+    -ms-grid-row: 3;
+    grid-row: 3;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+    margin-bottom: 41px;
+  }
+  .footer__contact-details {
+    -ms-grid-row: 4;
+    grid-row: 4;
+    grid-column: span 4;
+    -ms-flex-preferred-size: 0;
+        flex-basis: 0;
+  }
+  .footer__contact-form {
+    -ms-grid-row: 5;
+    grid-row: 5;
+    grid-column: span 4;
+    padding: 0;
+  }
+  .footer__info {
+    -ms-grid-row: 8;
+    grid-row: 8;
+    grid-column: span 4;
+  }
+  .footer__title--mb3 {
+    margin-bottom: 30px;
+  }
+  .footer__bottom {
+    -ms-grid-row: 6;
+    grid-row: 6;
+  }
+  .footer__bottom-image {
+    -ms-grid-row: 7;
+    grid-row: 7;
+    grid-column: span 4;
+    -ms-grid-column-align: start;
+        justify-self: start;
+  }
+  .footer__title {
+    font-size: 14px;
+    line-height: 160%;
+  }
+  .footer__item, .footer__text {
+    -ms-flex-preferred-size: 100px;
+        flex-basis: 100px;
+    font-size: 18px;
+    line-height: 23px;
+  }
+}
+
 @media (max-width: 500px) {
   .footer__categories {
     margin-right: 25px;
   }
   .footer__title {
     font-size: 14px;
-    line-height: 18px;
+    line-height: 160%;
   }
   .footer__item, .footer__text {
     -ms-flex-preferred-size: 100px;
         flex-basis: 100px;
-    font-size: 11px;
-    line-height: 150%;
+    font-size: 18px;
+    line-height: 23px;
   }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 376px) {
+  .activities__title {
+    font-size: 19px;
+    line-height: 24px;
+  }
+  .card__title {
+    font-size: 16px;
+    line-height: 20px;
+  }
+  .footer {
+    padding-bottom: 15px;
+  }
   .footer-wrapper {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
@@ -2056,7 +2168,9 @@ template {
   .footer__contact-details {
     -ms-grid-row: 6;
     grid-row: 6;
-    grid-column: span 4;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 4;
+    grid-column: 1 / 5;
     -ms-flex-preferred-size: 0;
         flex-basis: 0;
   }
@@ -2066,13 +2180,12 @@ template {
     grid-column: span 4;
     padding: 0;
   }
-  .footer__info {
-    -ms-grid-row: 8;
-    grid-row: 8;
-    grid-column: span 4;
-  }
   .footer__title--mb3 {
     margin-bottom: 30px;
+  }
+  .footer__bottom {
+    -ms-grid-row: 8;
+    grid-row: 8;
   }
   .footer__bottom-image {
     -ms-grid-row: 9;
@@ -2082,34 +2195,14 @@ template {
         justify-self: start;
   }
   .footer__title {
-    font-size: 18px;
-    line-height: 23px;
-  }
-  .footer__item, .footer__text {
     font-size: 14px;
     line-height: 160%;
   }
-}
-
-@media (max-width: 376px) {
-  .activities__title {
-    font-size: 19px;
-    line-height: 24px;
-  }
-  .card__title {
-    font-size: 16px;
-    line-height: 20px;
-  }
-  .footer {
-    padding-bottom: 36px;
-  }
-  .footer__bottom {
-    margin-bottom: 15px;
-  }
-  .footer__bottom-image {
-    -ms-flex-item-align: start;
-        -ms-grid-row-align: start;
-        align-self: start;
+  .footer__item, .footer__text {
+    -ms-flex-preferred-size: 100px;
+        flex-basis: 100px;
+    font-size: 18px;
+    line-height: 23px;
   }
 }
 
@@ -2144,31 +2237,6 @@ template {
     margin-bottom: 36px;
     padding-bottom: 0;
     margin-top: 0;
-  }
-  .footer {
-    padding-bottom: 15px;
-  }
-  .footer-wrapper {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
-  }
-  .footer__title--mb34 {
-    margin-bottom: 15px;
-  }
-  .footer__message {
-    margin-bottom: 15px;
-  }
-  .footer-form {
-    width: 100%;
-  }
-  .footer__message {
-    width: 100%;
-  }
-  .footer__button {
-    margin-bottom: 20px;
-  }
-  .footer__bottom {
-    margin-bottom: 10px;
   }
 }
 /*# sourceMappingURL=style.css.map */
