--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -121,7 +121,16 @@
   .container
     max-width: 576px
     width: 92%
-  .navbar
+  // .navbar
+    // мобильная версия
+    // &--mobile
+    //   &_fixed
+    //     position: fixed
+    //     left: 0
+    //     top: 0
+    //     right: 0
+    //     z-index: 99
+
     &__search, &-menu, &__user
       display: none
   .menu
@@ -253,12 +262,14 @@
     &__additional
       margin-right: 7px
       margin-left: 0
-      &__title
-        font-size: 15px
-        line-height: 19px
-    &__item
-      font-size: 12px
-      line-height: 145%
+    &__title
+      font-size: 14px
+      line-height: 160%
+    &__item,
+    &__text
+      flex-basis: 100px
+      font-size: 16px
+      line-height: 21px
 @media (max-width: 576px)
   .logo
     width: 99px
@@ -301,13 +312,13 @@
       line-height: 24px
   .footer
     &__title
-      font-size: 15px
-      line-height: 19px
+      font-size: 14px
+      line-height: 160%
     &__item,
     &__text
       flex-basis: 100px
-      font-size: 11px
-      line-height: 145%
+      font-size: 16px
+      line-height: 21px
     &__categories
       margin-right: 40px
       margin-bottom: 50px
@@ -344,20 +355,95 @@
         grid-row: 6
         grid-column: span 4
         justify-self: start
+@media (max-width: 536px)
+  .footer
+    &-wrapper
+      flex-basis: 100%
+      grid-column: 1fr 1fr 1fr
+      grid-gap: 0 0 
+    &__logo
+      grid-row: 1
+      width: 104px
+      height: 120px
+      margin-bottom: 49px
+    &__social
+      &-network
+        display: flex
+        flex-direction: column
+        grid-row: 2
+        grid-column: 1 / 3
+        justify-self: start
+        align-self: start
+        margin-bottom: 30px
+        width: 100%
+    &_legal
+      grid-row: 2
+      grid-column: 3 / 5
+      margin-bottom: 30px
+    &__title
+      &--inline
+        margin-bottom: 20px 
+    &__additional
+      grid-row: 3
+      grid-column: span 2
+      margin-bottom: 30px
+    &__categories
+      grid-row: 3
+      grid-column: 1 / 3
+      margin-bottom: 41px
+    &__contact
+      &-details
+        grid-row: 4
+        grid-column: span 4
+        flex-basis: 0
+      &-form
+        grid-row: 5
+        grid-column: span 4
+        padding: 0
+    &__info
+      grid-row: 8
+      grid-column: span 4
+
+    &__title
+      &--mb3
+        margin-bottom: 30px
+    &__bottom
+      grid-row: 6
+      &-image
+        grid-row: 7
+        grid-column: span 4
+        justify-self: start
+    &__title
+      font-size: 14px
+      line-height: 160%
+    &__item,
+    &__text
+      flex-basis: 100px
+      font-size: 18px
+      line-height: 23px
 @media (max-width: 500px)
   .footer
     &__categories
       margin-right: 25px
     &__title
       font-size: 14px
-      line-height: 18px
+      line-height: 160%
     &__item,
     &__text
       flex-basis: 100px
-      font-size: 11px
-      line-height: 150%
-@media (max-width: 450px)
+      font-size: 18px
+      line-height: 23px
+@media (max-width: 376px)
+  .activities
+    &__title
+      font-size: 19px
+      line-height: 24px
+  .card 
+    &__title
+      font-size: 16px
+      line-height: 20px
   .footer
+    padding-bottom: 15px
     &-wrapper
       flex-basis: 100%
       grid-gap: 0 0 
@@ -393,46 +479,29 @@
     &__contact
       &-details
         grid-row: 6
-        grid-column: span 4
+        grid-column: 1 / 5
         flex-basis: 0
       &-form
         grid-row: 7
         grid-column: span 4
         padding: 0
-    &__info
-      grid-row: 8
-      grid-column: span 4
-
     &__title
       &--mb3
         margin-bottom: 30px
     &__bottom
+      grid-row: 8
       &-image
         grid-row: 9
         grid-column: span 4
         justify-self: start
     &__title
-      font-size: 18px
-      line-height: 23px
-    &__item,
-    &__text
       font-size: 14px
       line-height: 160%
-@media (max-width: 376px)
-  .activities
-    &__title
-      font-size: 19px
-      line-height: 24px
-  .card 
-    &__title
-      font-size: 16px
-      line-height: 20px
-  .footer
-    padding-bottom: 36px
-    &__bottom
-      margin-bottom: 15px
-      &-image
-        align-self: start
+    &__item,
+    &__text
+      flex-basis: 100px
+      font-size: 18px
+      line-height: 23px   
 @media (max-width: 320px) 
   .hotel
     padding-top: 0
@@ -462,26 +531,6 @@
       margin-bottom: 36px
       padding-bottom: 0  
       margin-top: 0
-  .footer
-    padding-bottom: 15px
-    &-wrapper
-      grid-template-columns: 1fr
-    &__title
-      &--mb34
-        margin-bottom: 15px
-    &__message
-      margin-bottom: 15px    
-    &-form
-      width: 100%
-    &__message
-      width: 100%
-    &__button
-      margin-bottom: 20px
-    &__bottom
-      margin-bottom: 10px
-
-
-       
 
 
 
