--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -28,6 +28,11 @@
       font-size: 14px
       line-height: 18px
       text-transform: uppercase
+    &__item
+      &--mobile
+        &--visible
+          display: none
+
 .logo
   width: 177px      
 .search
@@ -68,6 +73,12 @@
     font-size: 14px
     line-height: 18px
     color: $text-color  
+.navbar
+  &__user, &__search
+    &--mobile
+      &--visible
+        display: none
+
    
 
 
