--- a/css/style.css
+++ b/css/style.css
@@ -417,6 +417,10 @@ template {
   text-transform: uppercase;
 }
 
+.navbar-menu__item--mobile--visible {
+  display: none;
+}
+
 .logo {
   width: 177px;
 }
@@ -476,6 +480,10 @@ template {
   font-size: 14px;
   line-height: 18px;
   color: #333333;
+}
+
+.navbar__user--mobile--visible, .navbar__search--mobile--visible {
+  display: none;
 }
 
 .breadcrumb-list {
@@ -1482,6 +1490,10 @@ template {
 }
 
 @media (max-width: 992px) {
+  .footer {
+    padding-top: 73px;
+    padding-bottom: 33px;
+  }
   .container,
   .newsletter-wrapper {
     max-width: 700px;
@@ -1632,9 +1644,63 @@ template {
 }
 
 @media (max-width: 767px) {
+  .body {
+    padding-top: 78px;
+  }
+  .breadcrumb {
+    padding-top: 78px;
+  }
   .container {
     max-width: 576px;
     width: 92%;
+  }
+  .navbar--mobile_fixed {
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    z-index: 99;
+  }
+  .navbar__user--mobile--hidden, .navbar__search--mobile--hidden {
+    display: none;
+  }
+  .navbar__user--mobile--visible, .navbar__search--mobile--visible {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .navbar__user {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .navbar-bottom {
+    display: none;
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 78px;
+    padding-top: 30px;
+  }
+  .navbar-bottom--visible {
+    display: block;
+  }
+  .navbar-menu {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .navbar-menu__item {
+    padding-bottom: 20px;
+  }
+  .navbar-menu__item--mobile--visible {
+    display: block;
   }
   .menu-button {
     display: -webkit-box;
@@ -1661,6 +1727,11 @@ template {
     width: 16px;
     height: 1px;
     background-color: #333333;
+  }
+  .user__name--light {
+    color: #ffffff;
+    margin-left: 0;
+    margin-top: 10px;
   }
   .stars {
     -ms-flex-preferred-size: auto;
@@ -1768,12 +1839,12 @@ template {
     margin-bottom: 50px;
   }
   .footer__title {
-    font-size: 17px;
-    line-height: 21px;
+    font-size: 18px;
+    line-height: 23px;
   }
   .footer__item {
     font-size: 14px;
-    line-height: 150%;
+    line-height: 160%;
   }
 }
 
@@ -1802,8 +1873,8 @@ template {
     line-height: 20px;
   }
   .card__item {
-    font-size: 13px;
-    line-height: 145%;
+    font-size: 14px;
+    line-height: 160%;
   }
 }
 
@@ -1835,14 +1906,12 @@ template {
     margin-left: 0;
   }
   .footer__title {
-    font-size: 14px;
-    line-height: 160%;
+    font-size: 17px;
+    line-height: 22px;
   }
   .footer__item, .footer__text {
-    -ms-flex-preferred-size: 100px;
-        flex-basis: 100px;
-    font-size: 16px;
-    line-height: 21px;
+    font-size: 13px;
+    line-height: 150%;
   }
 }
 
@@ -1903,89 +1972,6 @@ template {
     font-size: 19px;
     line-height: 24px;
   }
-  .footer__title {
-    font-size: 14px;
-    line-height: 160%;
-  }
-  .footer__item, .footer__text {
-    -ms-flex-preferred-size: 100px;
-        flex-basis: 100px;
-    font-size: 16px;
-    line-height: 21px;
-  }
-  .footer__categories {
-    margin-right: 40px;
-    margin-bottom: 50px;
-  }
-  .footer__contact-details {
-    margin-bottom: 40px;
-  }
-  .footer__contact-form {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-flow: wrap;
-        flex-flow: wrap;
-    margin-bottom: 0;
-  }
-  .footer__info {
-    -webkit-box-ordinal-group: 2;
-        -ms-flex-order: 1;
-            order: 1;
-    margin-bottom: 15px;
-  }
-  .footer__button {
-    -webkit-box-ordinal-group: 3;
-        -ms-flex-order: 2;
-            order: 2;
-    margin-bottom: 30px;
-  }
-  .footer__button-list {
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: start;
-  }
-  .footer__input {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
-  }
-  .footer__button-list {
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: start;
-  }
-  .footer__bottom-image {
-    -ms-grid-row: 6;
-    grid-row: 6;
-    grid-column: span 4;
-    -ms-grid-column-align: start;
-        justify-self: start;
-  }
-}
-
-@media (max-width: 536px) {
   .footer-wrapper {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
@@ -2041,7 +2027,8 @@ template {
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-column: 1 / 3;
-    margin-bottom: 41px;
+    margin-right: 40px;
+    margin-bottom: 50px;
   }
   .footer__contact-details {
     -ms-grid-row: 4;
@@ -2049,8 +2036,15 @@ template {
     grid-column: span 4;
     -ms-flex-preferred-size: 0;
         flex-basis: 0;
+    margin-bottom: 40px;
   }
   .footer__contact-form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-flow: wrap;
+        flex-flow: wrap;
+    margin-bottom: 0;
     -ms-grid-row: 5;
     grid-row: 5;
     grid-column: span 4;
@@ -2060,6 +2054,10 @@ template {
     -ms-grid-row: 8;
     grid-row: 8;
     grid-column: span 4;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    margin-bottom: 15px;
   }
   .footer__title--mb3 {
     margin-bottom: 30px;
@@ -2075,45 +2073,69 @@ template {
     -ms-grid-column-align: start;
         justify-self: start;
   }
-  .footer__title {
-    font-size: 14px;
-    line-height: 160%;
+  .footer__button {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    margin-bottom: 30px;
   }
-  .footer__item, .footer__text {
-    -ms-flex-preferred-size: 100px;
-        flex-basis: 100px;
+  .footer__button-list {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+  .footer__input {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+  .footer__button-list {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+  .footer__bottom-image {
+    -ms-grid-row: 7;
+    grid-row: 7;
+    grid-column: span 4;
+    -ms-grid-column-align: start;
+        justify-self: start;
+  }
+  .footer__title {
     font-size: 18px;
     line-height: 23px;
   }
-}
-
-@media (max-width: 500px) {
-  .footer__categories {
-    margin-right: 25px;
-  }
-  .footer__title {
+  .footer__item, .footer__text {
     font-size: 14px;
     line-height: 160%;
   }
-  .footer__item, .footer__text {
-    -ms-flex-preferred-size: 100px;
-        flex-basis: 100px;
-    font-size: 18px;
-    line-height: 23px;
-  }
 }
 
-@media (max-width: 376px) {
-  .activities__title {
-    font-size: 19px;
-    line-height: 24px;
-  }
-  .card__title {
-    font-size: 16px;
-    line-height: 20px;
-  }
+@media (max-width: 480px) {
   .footer {
-    padding-bottom: 15px;
+    padding-top: 69px;
+    padding-bottom: 25px;
   }
   .footer-wrapper {
     -ms-flex-preferred-size: 100%;
@@ -2183,6 +2205,9 @@ template {
   .footer__title--mb3 {
     margin-bottom: 30px;
   }
+  .footer__button {
+    margin-bottom: 6px;
+  }
   .footer__bottom {
     -ms-grid-row: 8;
     grid-row: 8;
@@ -2195,14 +2220,23 @@ template {
         justify-self: start;
   }
   .footer__title {
+    font-size: 18px;
+    line-height: 23px;
+  }
+  .footer__item, .footer__text {
     font-size: 14px;
     line-height: 160%;
   }
-  .footer__item, .footer__text {
-    -ms-flex-preferred-size: 100px;
-        flex-basis: 100px;
-    font-size: 18px;
-    line-height: 23px;
+}
+
+@media (max-width: 376px) {
+  .activities__title {
+    font-size: 19px;
+    line-height: 24px;
+  }
+  .card__title {
+    font-size: 16px;
+    line-height: 20px;
   }
 }
 
