--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,40 @@ img {
   max-width: 100%;
 }
 
+.input {
+  background-color: #fff;
+  border-radius: 4px;
+  border: none;
+  padding: 0 23px;
+  height: 50px;
+}
+
+.message {
+  max-width: 539px;
+  max-height: 123px;
+  background-color: #fff;
+  border-radius: 4px;
+  border: none;
+  padding: 18px 23px;
+  resize: none;
+}
+
+.button {
+  min-width: 160px;
+  min-height: 50px;
+  padding: 18px 0 17px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  color: #ffffff;
+  background: #EC1F46;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  outline: 0;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -455,6 +489,7 @@ template {
   height: 100%;
   border: none;
   background-color: #EC1F46;
+  outline: 0;
 }
 
 .user {
@@ -923,6 +958,7 @@ template {
   border: none;
   background-color: #EC1F46;
   color: #ffffff;
+  outline: 0;
 }
 
 .reviews {
@@ -1166,6 +1202,7 @@ template {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  outline: 0;
 }
 
 .footer {
@@ -1337,11 +1374,6 @@ template {
 }
 
 .footer__input {
-  background-color: #fff;
-  border-radius: 4px;
-  border: none;
-  padding: 0 23px;
-  height: 50px;
   margin-bottom: 15px;
   -ms-flex-preferred-size: 48%;
       flex-basis: 48%;
@@ -1370,10 +1402,6 @@ template {
 .footer__message {
   max-width: 539px;
   height: 123px;
-  background-color: #fff;
-  border-radius: 4px;
-  border: none;
-  padding: 18px 23px;
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
   resize: none;
@@ -1398,21 +1426,6 @@ template {
 
 .footer__message::placeholder {
   color: #BDBDBD;
-}
-
-.footer__button {
-  min-width: 160px;
-  min-height: 50px;
-  padding: 18px 0 17px;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 12px;
-  line-height: 15px;
-  color: #ffffff;
-  background: #EC1F46;
-  border-radius: 4px;
-  border: none;
-  cursor: pointer;
 }
 
 .footer__info {
@@ -1457,6 +1470,118 @@ template {
       align-self: end;
   -ms-grid-column-align: end;
       justify-self: end;
+}
+
+.footer__bottom__button {
+  outline: 0;
+}
+
+.modal__overlay {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 143, 223, 0.39);
+  z-index: 100;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: opacity 0.2s;
+  transition: opacity 0.2s;
+}
+
+.modal__overlay--visible {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal__dialog {
+  position: fixed;
+  max-width: 478px;
+  top: 50%;
+  left: 50%;
+  padding: 33px 88px;
+  background-color: #0A223D;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  border-radius: 8px;
+  color: #ffffff;
+  z-index: 101;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: opacity 0.2s;
+  transition: opacity 0.2s;
+}
+
+.modal__dialog--visible {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal__close {
+  position: absolute;
+  top: 17px;
+  right: 18px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal__input::-webkit-input-placeholder, .modal__message::-webkit-input-placeholder {
+  color: #BDBDBD;
+}
+
+.modal__input:-ms-input-placeholder, .modal__message:-ms-input-placeholder {
+  color: #BDBDBD;
+}
+
+.modal__input::-ms-input-placeholder, .modal__message::-ms-input-placeholder {
+  color: #BDBDBD;
+}
+
+.modal__input::placeholder, .modal__message::placeholder {
+  color: #BDBDBD;
+}
+
+.modal__title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 23px;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.modal__input {
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.modal__message {
+  width: 100%;
+  min-height: 123px;
+  margin-bottom: 15px;
+}
+
+.modal__info {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  color: #BDBDBD;
+}
+
+.modal__button-list {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 @media (max-width: 1200px) {
@@ -1643,6 +1768,33 @@ template {
   }
 }
 
+@media (max-width: 870px) {
+  .modal__button-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+  .modal__info {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+    margin-bottom: 10px;
+  }
+  .modal__input {
+    width: 100%;
+  }
+  .modal__dialog--visible {
+    width: 100%;
+  }
+}
+
 @media (max-width: 767px) {
   .body {
     padding-top: 78px;
@@ -1678,6 +1830,9 @@ template {
         -ms-flex-pack: center;
             justify-content: center;
   }
+  .navbar__user--mobile--visible {
+    margin-bottom: 7px;
+  }
   .navbar-bottom {
     display: none;
     position: fixed;
@@ -1689,18 +1844,24 @@ template {
   }
   .navbar-bottom--visible {
     display: block;
+    padding-bottom: 69px;
   }
   .navbar-menu {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    padding: 0;
   }
   .navbar-menu__item {
     padding-bottom: 20px;
   }
   .navbar-menu__item--mobile--visible {
     display: block;
+  }
+  .navbar__search--mobile--visible {
+    max-width: 245px;
+    margin-bottom: 19px;
   }
   .menu-button {
     display: -webkit-box;
@@ -1722,6 +1883,7 @@ template {
     border: none;
     background-color: #fff;
     cursor: pointer;
+    outline: 0;
   }
   .menu-button__line {
     width: 16px;
@@ -2227,6 +2389,17 @@ template {
     font-size: 14px;
     line-height: 160%;
   }
+  .modal__dialog--visible {
+    padding-left: 78px;
+    padding-right: 78px;
+  }
+}
+
+@media (max-width: 450px) {
+  .modal__dialog--visible {
+    padding-left: 68px;
+    padding-right: 68px;
+  }
 }
 
 @media (max-width: 376px) {
@@ -2237,6 +2410,17 @@ template {
   .card__title {
     font-size: 16px;
     line-height: 20px;
+  }
+  .modal__dialog--visible {
+    padding-left: 58px;
+    padding-right: 58px;
+  }
+}
+
+@media (max-width: 350px) {
+  .modal__dialog--visible {
+    padding-left: 48px;
+    padding-right: 48px;
   }
 }
 
