--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -8,5 +8,35 @@ body
   max-width: 1100px
   margin: auto
 img
-  max-width: 100%  
+  max-width: 100% 
+.input
+  background-color: #fff
+  border-radius: 4px
+  border: none
+  padding: 0 23px
+  height: 50px
+.message
+  max-width: 539px
+  max-height: 123px
+  background-color: #fff
+  border-radius: 4px
+  border: none
+  padding: 18px 23px
+  resize: none
+.button
+  min-width: 160px
+  min-height: 50px
+  padding: 18px 0 17px
+  font-style: normal
+  font-weight: bold
+  font-size: 12px
+  line-height: 15px
+  color: $light
+  background: $primary
+  border-radius: 4px
+  border: none
+  cursor: pointer
+  outline: 0
+
+
   
