--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -90,11 +90,7 @@
     text-decoration: none
     color: inherit
   &__input
-    background-color: #fff
-    border-radius: 4px
-    border: none
-    padding: 0 23px
-    height: 50px
+
     margin-bottom: 15px
     flex-basis: 48%
     font-style: normal
@@ -107,10 +103,6 @@
   &__message
     max-width: 539px
     height: 123px
-    background-color: #fff
-    border-radius: 4px
-    border: none
-    padding: 18px 23px
     flex-basis: 100%
     resize: none
     margin-bottom: 22px
@@ -120,19 +112,7 @@
     line-height: 15px
     &::placeholder
       color: #BDBDBD 
-  &__button
-    min-width: 160px
-    min-height: 50px
-    padding: 18px 0 17px 
-    font-style: normal
-    font-weight: bold
-    font-size: 12px
-    line-height: 15px
-    color: $light
-    background: $primary
-    border-radius: 4px
-    border: none
-    cursor: pointer
+
   &__info
     font-style: normal
     font-weight: bold
@@ -159,6 +139,8 @@
       height: 22px
       align-self: end
       justify-self: end
+    &__button
+      outline: 0
     // &__button
     //   &-list
     //     display: flex
