--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -47,6 +47,7 @@
   height: 55px
   border-radius: 4px
   overflow: hidden
+ 
   &__input
     position: absolute
     width: 100%
@@ -69,6 +70,7 @@
     border: none
     background-color: $primary
     color: $light
+    outline: 0
 
 
 
