--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -23,6 +23,7 @@ img
   border: none
   padding: 18px 23px
   resize: none
+  outline: 0
 .button
   min-width: 160px
   min-height: 50px
@@ -37,6 +38,13 @@ img
   border: none
   cursor: pointer
   outline: 0
+.invalid
+  color: $primary
+  border-bottom: 1px solid $primary
+  // z-index: 99
+
+
+
 
 
   
