--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -90,13 +90,16 @@
     text-decoration: none
     color: inherit
   &__input
-
-    margin-bottom: 15px
-    flex-basis: 48%
-    font-style: normal
-    font-weight: normal
-    font-size: 12px
-    line-height: 15px
+    width: 100%
+    // margin-bottom: 15px
+    &-group
+      // margin-bottom: 15px
+      flex-basis: 48%
+      font-style: normal
+      font-weight: normal
+      font-size: 12px
+      line-height: 15px
+      margin-bottom: 0
     &::placeholder
       color: #BDBDBD 
 
@@ -106,6 +109,7 @@
     flex-basis: 100%
     resize: none
     margin-bottom: 22px
+    margin-top: 15px
     font-style: normal
     font-weight: normal
     font-size: 12px
