--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -30,6 +30,7 @@
     &--visible
       visibility: visible
       opacity: 1
+      width: 100%
   &__close
     position: absolute
     top: 17px
@@ -48,12 +49,16 @@
     text-transform: uppercase
     text-align: center
   &__input
+
     width: 100%
-    margin-bottom: 15px
+    margin-top: 15px
+    outline: 0
   &__message
     width: 100%
     min-height: 123px
-    margin-bottom: 15px
+    margin-top: 15px
+  &__button
+    margin-top: 15px
   &__info
     font-style: normal
     font-weight: bold
@@ -66,5 +71,22 @@
       display: flex
       justify-content: space-between
       align-items: center
+.modal
+  &__input
+    &-group
+      margin: 0
+      padding: 0
+// .modal
+//   &__form
+//     &-group
+//       position: relative
+.invalid
+  // position: absolute
+  // margin-top: -50px
+  font-size: 13px
+  margin-top: 0
+  
+
+
 
 
