--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -48,6 +48,10 @@
     justify-content: space-between
   &__input
     flex-basis: 40%
+    font-style: normal
+    font-weight: normal
+    font-size: 12px
+    line-height: 15px
   &__ul
     padding: 0
     margin: 0
@@ -91,9 +95,9 @@
     color: inherit
   &__input
     width: 100%
-    // margin-bottom: 15px
+   
     &-group
-      // margin-bottom: 15px
+    
       flex-basis: 48%
       font-style: normal
       font-weight: normal
