--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -45,12 +45,12 @@
   position: relative
   width: 350px
   height: 55px
-  border-radius: 4px
-  overflow: hidden
+  // overflow: hidden
  
   &__input
     position: absolute
     width: 100%
+    border-radius: 4px
     height: 100%
     border: none
     padding-left: 33px
@@ -71,6 +71,7 @@
     background-color: $primary
     color: $light
     outline: 0
+    border-radius: 0 4px 4px 0
 
 
 
